# navidrome-scim

./: .gitignore  Authentik.md  Makefile  README.md  not-pyproject.toml  pyproject.toml  setup.py
charts/navidrome-scim/: Chart.yaml  Makefile  README.md  values.yaml
charts/navidrome-scim/templates/: NOTES.txt  _helpers.tpl  bearer-token-secret.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/navidrome-scim/templates/tests/: test-connection.yaml
docker/: Dockerfile  Makefile  entrypoint
docker/scim/: __init__.py  scim.py
src/navidrome_scim/: __init__.py  db.py  scim.py  tests.py
src/scim/: db.py  scim.py
